--- a/src/config/config.json
+++ b/src/config/config.json
@@ -107,20 +107,24 @@
     },
 
     "sceneC":
-    { "maxAmount":          1300,
+    { "maxAmount":          1600,
       "minAmount":          600,
-      "maxSize":            4,
-      "minSize":            2,
+      "maxSize":            5,
+      "minSize":            3,
+      "maxProb":            0.4,
+      "minProb":            0.1,
       "theMoreTheLes":      -1,
       "makePlane":          0.3,
       "makeTriangle":       0.7
     },
 
     "sceneD":
-    { "maxAmount":          1300,
-      "minAmount":          600,
-      "maxSize":            4,
-      "minSize":            2,
+    { "maxAmount":          5000,
+      "minAmount":          300,
+      "maxSize":            6,
+      "minSize":            4,
+      "maxProb":            0.4,
+      "minProb":            0.1,
       "theMoreTheLes":      -1,
       "makePlane":          0.3,
       "makeTriangle":       0.7
