--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/fiber": "^6.0.20",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "fscreen": "^1.2.0",
     "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie": "^1.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "suncalc": "^1.8.0",
-    "three": "^0.128.0",
-    "web-vitals": "^1.1.1"
+    "three": "^0.128.0"
   },
   "scripts": {
     "start": "react-scripts start",
