--- a/src/config/config.json
+++ b/src/config/config.json
@@ -59,7 +59,12 @@
   },
 
   "visuals":
-  { "speed":                0.1,
+  { "camera":
+    { "fov":                  75,
+      "near":                 0.1,
+      "far":                  1000
+    },
+
     "colors":
     { "hueRange":           360,
       "dataMin":            0.01,
@@ -75,7 +80,6 @@
     { "minBlur":            0.5,
       "maxBlur":            0.49
     },
-
 
     "sceneA":
     { "maxAmount":          800,
